K8s/ea-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\dthie\kompose\kompose.exe -f docker-compose.yml convert
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: ea-backend
  name: ea-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ea-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\dthie\kompose\kompose.exe -f docker-compose.yml convert
        kompose.version: 1.21.0 (992df58d8)
      labels:
        io.kompose.network/ea-network: "true"
        io.kompose.service: ea-backend
    spec:
      containers:
      - args:
        - npm
        - run
        - server
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080
          initialDelaySeconds: 5
          periodSeconds: 5
        image: frost2203/ea-backend:local
        imagePullPolicy: IfNotPresent
        name: ea-backend
        ports:
        - containerPort: 8080
        resources: 
          requests:
            memory: 200Mi
            cpu: 250m
          limits:
            memory: 200Mi
            cpu: 500m
        volumeMounts:
        - mountPath: /run/secrets/db-password
          name: db-password
        - mountPath: /run/secrets/db-endpoint
          name: db-endpoint
        - mountPath: /run/secrets/db-database
          name: db-database
        - mountPath: /nodejsserver/roomImages
          name: backend-room-images
        workingDir: /nodejsserver
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-password
        secret:
          secretName: db-password
      - name: db-endpoint
        secret:
          secretName: db-endpoint
      - name: db-database
        secret:
          secretName: db-database
      - name: backend-room-images
        persistentVolumeClaim:
          claimName: backend-room-images
status: {}
