K8s/ea-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ea-ingress
  labels:
    name: ea-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.frostdevops.com
    http:
      paths:
      - pathType: Prefix
        path: "/socket.io"
        backend:
          service:
            name: ea-chatapp
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/chat"
        backend:
          service:
            name: ea-chatapp
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/backend"
        backend:
          service:
            name: ea-backend
            port:
              number: 8080
